feat: adiciona configuração do Prisma com integração PostgreSQL
- Atualizado o package.json para incluir dependências do Prisma e um script de seed.

- Criado o prisma.config.ts para configuração do Prisma.

- Adicionado o schema.prisma definindo os modelos User, Order e Item.

- Implementado o prisma.js para inicializar o cliente Prisma com o adaptador PostgreSQL.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "db:seed": "npx node prisma/seed.js"
   },
   "dependencies": {
-    "next": "16.0.6"
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.0.1",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "next": "16.0.6",
+    "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "dotenv": "^17.2.3",
+    "prisma": "^7.0.1"
   }
 }
